# assign-resources

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
assign-resources/: Cargo.toml
assign-resources/src/: lib.rs
src/: lib.rs
tests/: Cargo.toml
tests/src/: dummy.rs  lib.rs
