[package]
name = "assign-resources"
version = "0.4.1"
edition = "2021"
description = "Macro to split up fields of a Peripherals struct into new structs"
repository = "https://github.com/adamgreig/assign-resources"
license = "MIT OR Apache-2.0"
keywords = ["embassy", "pac", "peripherals", "embedded"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[dependencies]
